left column spacing issue fixed

--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -99,6 +99,10 @@
                 border-bottom-right-radius: 190px;
                 z-index: -9;
             }
+
+            .left-column {
+                padding: 45px 120px 45px 0;
+            }
         }
 
         .background-arrow {
