--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,9 @@
     border-bottom-right-radius: 190px;
     z-index: -9;
   }
+  .hero .container .left-column {
+    padding: 45px 120px 45px 0;
+  }
   .hero .background-arrow {
     position: absolute;
     top: 430px;
